Improve IidmXmlVersion
Signed-off-by: VEDELAGO MIORA <miora.ralambotiana@rte-france.com>

Rename method in IidmXmlVersion

Signed-off-by: VEDELAGO MIORA <miora.ralambotiana@rte-france.com>